Atributo nickname insertado en users y CreateCommand.php arreglado
